Bug 762101 - Correctly convert from screen coordinates to buffer coordinates in ShadowBufferOGL::Upload. r=cjones